Fix errata layout on IE

--- a/src/styles/components/filter-buttons.scss
+++ b/src/styles/components/filter-buttons.scss
@@ -8,12 +8,11 @@ $text-black3: rgba(0, 0, 0, 0.54);
 
 .filter {
     color: color(gray);
-    left: 0;
-    margin: 0 auto;
+    left: 50%;
     max-width: 70rem;
     position: absolute;
-    right: 0;
-    top: -2.1rem;
+    transform: translate(-50%, -140%);
+    width: 100%;
     z-index: 1;
 
     &::before,
